# oca-manufacture

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
.github/workflows/: test.yml
account_move_line_mrp_info/: README.rst  __manifest__.py
account_move_line_mrp_info/i18n/: account_move_line_mrp_info.pot
mrp_component_operation/: README.rst  __manifest__.py
mrp_component_operation/i18n/: es.po  it.po  mrp_component_operation.pot
mrp_component_operation/models/: __init__.py  mrp_component_operation.py  mrp_production.py  stock_route.py
mrp_component_operation/readme/: CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
mrp_component_operation/tests/: test_component_operate.py
mrp_component_operation/views/: mrp_component_operation_views.xml  mrp_production_views.xml  stock_view.xml
mrp_component_operation/wizards/: mrp_component_operate.py  mrp_component_operate_wizard.xml
mrp_component_operation_scrap_reason/: README.rst  __manifest__.py
mrp_component_operation_scrap_reason/i18n/: es.po  it.po  mrp_component_operation_scrap_reason.pot
mrp_component_operation_scrap_reason/readme/: DESCRIPTION.md
mrp_multi_level/: README.rst  __manifest__.py
mrp_multi_level/i18n/: de.po  es.po  hr.po  (+2 more)
mrp_package_propagation/: README.rst
mrp_planned_order_matrix/: README.rst
mrp_production_back_to_draft/: README.rst
mrp_production_note/: README.rst
mrp_subcontracting_skip_no_negative/: README.rst  __manifest__.py
mrp_warehouse_calendar/: README.rst  __manifest__.py
quality_control_oca/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
(+39 files in other folders)
