[project]
name = "odoo-addons-oca-manufacture"
version = "17.0.20250224.0"
dependencies = [
    "odoo-addon-account_move_line_mrp_info>=17.0dev,<17.1dev",
    "odoo-addon-mrp_bom_component_menu>=17.0dev,<17.1dev",
    "odoo-addon-mrp_bom_hierarchy>=17.0dev,<17.1dev",
    "odoo-addon-mrp_bom_tracking>=17.0dev,<17.1dev",
    "odoo-addon-mrp_component_operation>=17.0dev,<17.1dev",
    "odoo-addon-mrp_mass_production_order>=17.0dev,<17.1dev",
    "odoo-addon-mrp_multi_level>=17.0dev,<17.1dev",
    "odoo-addon-mrp_multi_level_estimate>=17.0dev,<17.1dev",
    "odoo-addon-mrp_planned_order_matrix>=17.0dev,<17.1dev",
    "odoo-addon-mrp_production_back_to_draft>=17.0dev,<17.1dev",
    "odoo-addon-mrp_production_note>=17.0dev,<17.1dev",
    "odoo-addon-mrp_production_picking_type_from_route>=17.0dev,<17.1dev",
    "odoo-addon-mrp_repair_order>=17.0dev,<17.1dev",
    "odoo-addon-mrp_sale_info>=17.0dev,<17.1dev",
    "odoo-addon-mrp_subcontracting_purchase_link>=17.0dev,<17.1dev",
    "odoo-addon-mrp_tag>=17.0dev,<17.1dev",
    "odoo-addon-mrp_warehouse_calendar>=17.0dev,<17.1dev",
    "odoo-addon-mrp_workorder_sequence>=17.0dev,<17.1dev",
    "odoo-addon-quality_control_oca>=17.0dev,<17.1dev",
    "odoo-addon-quality_control_oca_timesheet>=17.0dev,<17.1dev",
    "odoo-addon-quality_control_stock_oca>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
